<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/fx_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_decoration"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:letterSpacing="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clock"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_marginTop="48dp"
            android:text="@string/clock"
            android:textSize="18sp"
            android:elevation="10dp"
            android:translationZ="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_t"
            android:textSize="18sp"
            android:elevation="10dp"
            android:translationZ="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>