<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        app:contentInsetStart="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/left_icon_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_3"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lbl_toolbar_title"
                    style="@style/toolbar_main_title"
                    android:text="@string/settings_t" />

            </LinearLayout>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:orientation="horizontal">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="@dimen/dp_20"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_15">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lbl_active"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:text="@string/matrix"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_16"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_matrix_mode"
                            android:layout_width="60dp"
                            android:layout_height="28dp"
                            android:background="@drawable/switch_back"
                            android:layout_gravity="center_vertical"
                            android:button="@null"
                            android:checked="false"
                            app:track="@null"
                            android:thumb="@null"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_5"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/lbl_fix"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:text="@string/season"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_16"/>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switch_season_mode"
                            android:layout_width="60dp"
                            android:layout_height="28dp"
                            android:background="@drawable/switch_back"
                            android:layout_gravity="center_vertical"
                            android:button="@null"
                            android:checked="false"
                            app:track="@null"
                            android:thumb="@null"/>

                    </LinearLayout>







                </LinearLayout>

            </androidx.core.widget.NestedScrollView>



        </RelativeLayout>

    </LinearLayout>

</LinearLayout>